--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,12 +1,14 @@
-#test_server_mcb
-add_executable(test_server_mcb test_server_mcb.cpp
+#test_client_mcb
+add_executable(test_client_mcb test_client_mcb.cpp
+        ../src/ClientUdp.cpp
+        ../src/MainControlBoard.cpp
+        ../src/Common.cpp)
+target_link_libraries(test_client_mcb ${LINK_LIBS})
+
+#test_server_info
+add_executable(test_server_info test_server_info.cpp
         ../src/ClientInfo.cpp
         ../src/ServerUdp.cpp
-        ../src/MainControlBoard.cpp)
-target_link_libraries(test_server_mcb ${LINK_LIBS})
-
-#test_client_info
-add_executable(test_client_info test_client_info.cpp
-        ../src/ClientUdp.cpp
-        ../src/StatusBoard.cpp)
-target_link_libraries(test_client_info ${LINK_LIBS})
+        ../src/StatusBoard.cpp
+        ../src/Common.cpp)
+target_link_libraries(test_server_info ${LINK_LIBS})
