进行c++ qt编写界面 ing step1

--- a/qtUi/CMakeLists.txt
+++ b/qtUi/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
-project(qtUi)
+
+set(TargetName qtUi)
 
 set(CMAKE_CXX_STANDARD 11)
 
@@ -19,9 +20,8 @@ find_package(Qt5 COMPONENTS
 include_directories(..)
 include_directories(../background/include)
 
-add_executable(${CMAKE_PROJECT_NAME} main.cpp MainWindow.cpp MainWindow.h MainWindow.ui
-        ../background/src/MainControlBoard.cpp
-        ../background/src/StatusBoard.cpp ../base/src/Common.cpp ../base/include/Common.h)
+add_executable(${TargetName} qtUi.cpp MainWindow.cpp MainWindow.h
+        ../background/src/MainControlBoard.cpp)
 
 set(LINK_LIBS ${LINK_LIBS}
         Qt5::Core
@@ -29,6 +29,6 @@ set(LINK_LIBS ${LINK_LIBS}
         Qt5::Widgets)
 
 
-target_link_libraries(${CMAKE_PROJECT_NAME}
+target_link_libraries(${TargetName}
         ${LINK_LIBS})
 
